Update routine and dev log handling